--- a/singolo1.scss
+++ b/singolo1.scss
@@ -67,11 +67,12 @@ ul {
         display: flex;
         font-size: 1.2rem;
         font-weight: 500;
-        letter-spacing: -0.05px;
+        letter-spacing: -0.01px;
         list-style-type: none;
         text-transform: uppercase;
 
         .header__menu--item {
+          position: relative;
           margin-right: 29px;
           margin-top: 10px;
 
@@ -79,9 +80,27 @@ ul {
             margin-right: 0;
           }
 
+          &:not(:last-child):after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            right: -16px;
+            transform: translateY(-50%);
+            width: 3px;
+            height: 3px;
+            background-color: #434759;
+            border-radius: 50%;
+          }
+
           a {
             text-decoration: none;
             color: #ffffff;
+            transition: color 0.5s linear;
+
+            &:hover {
+              color: #f06c64;
+              text-decoration: underline;
+            }
           }
         }
         .header__menu--active {
@@ -91,5 +110,65 @@ ul {
         }
       }
     }
+  }
+}
+
+.slider {
+  height: 600px;
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+
+  .slider__inner {
+    position: relative;
+    height: 590px;
+    /*   padding: 0 40px; */
+
+    .slider__prev {
+      content: '';
+      position: absolute;
+      top: 279px;
+      left: 0;
+      width: 20px;
+      height: 30px;
+      background-image: url('assets/img/prev.png');
+      background-repeat: no-repeat;
+      background-position: center center;
+      transition: all 0.5s linear;
+      cursor: pointer;
+
+      &:hover {
+        transform: translateX(-5px) scale(1.2);
+        transform-origin: center center;
+      }
+    }
+
+    .slider__next {
+      content: '';
+      position: absolute;
+      top: 279px;
+      right: -2px;
+      width: 20px;
+      height: 30px;
+      background-image: url('assets/img/next.png');
+      background-repeat: no-repeat;
+      background-position: center center;
+      transition: all 0.5s linear;
+      cursor: pointer;
+
+      &:hover {
+        transform: translateX(5px) scale(1.2);
+        transform-origin: center center;
+      }
+    }
+  }
+}
+
+.services {
+  height: 500px;
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+
+  .services__inner {
+    padding: 65px 38px 70px 40px;
   }
 }
