--- a/singolo1.css
+++ b/singolo1.css
@@ -1,3 +1,62 @@
+@font-face {
+  font-family: 'Lato Black';
+  src: url("assets/fonts/Lato-Black.eot");
+  src: url("assets/fonts/Lato-Black.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Black.woff") format("woff"), url("assets/fonts/Lato-Black.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Bold';
+  src: url("assets/fonts/Lato-Bold.eot");
+  src: url("assets/fonts/Lato-Bold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Bold.woff") format("woff"), url("assets/fonts/Lato-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Regular';
+  src: url("assets/fonts/Lato-Regular.eot");
+  src: url("assets/fonts/Lato-Regular.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Regular.woff") format("woff"), url("assets/fonts/Lato-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Light';
+  src: url("assets/fonts/Lato-Light.eot");
+  src: url("assets/fonts/Lato-Light.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Light.woff") format("woff"), url("assets/fonts/Lato-Light.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Lato Thin';
+  src: url("assets/fonts/Lato-Thin.eot");
+  src: url("assets/fonts/Lato-Thin.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Thin.woff") format("woff"), url("assets/fonts/Lato-Thin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
@@ -9,31 +68,6 @@ body {
   background-color: #fefefe;
 }
 
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
 .container {
   width: 100%;
   max-width: 1020px;
@@ -42,7 +76,7 @@ ul {
 }
 
 .header {
-  padding: 32px 0 32px;
+  padding: 33px 0 31px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
@@ -75,8 +109,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   font-size: 1.2rem;
-  font-weight: 500;
-  letter-spacing: -0.01px;
+  font-weight: 900;
+  /* letter-spacing: -0.01px; */
   list-style-type: none;
   text-transform: uppercase;
 }
@@ -105,10 +139,11 @@ ul {
 }
 
 .header .header__inner .header__menu--list .header__menu--item a {
+  font-weight: 500;
   text-decoration: none;
   color: #ffffff;
-  -webkit-transition: color 0.5s linear;
-  transition: color 0.5s linear;
+  -webkit-transition: color 0.3s linear;
+  transition: color 0.3s linear;
 }
 
 .header .header__inner .header__menu--list .header__menu--item a:hover {
@@ -122,6 +157,8 @@ ul {
 
 .slider {
   height: 600px;
+  width: 100%;
+  min-width: 940px;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
 }
@@ -129,6 +166,7 @@ ul {
 .slider .slider__inner {
   position: relative;
   height: 590px;
+  /* width: 940px; */
   /*   padding: 0 40px; */
 }
 
@@ -142,16 +180,39 @@ ul {
   background-image: url("assets/img/prev.png");
   background-repeat: no-repeat;
   background-position: center center;
-  -webkit-transition: all 0.5s linear;
-  transition: all 0.5s linear;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
   cursor: pointer;
 }
 
 .slider .slider__inner .slider__prev:hover {
-  -webkit-transform: translateX(-5px) scale(1.2);
-          transform: translateX(-5px) scale(1.2);
+  -webkit-transform: translateX(-3px) scale(1.2);
+          transform: translateX(-3px) scale(1.2);
   -webkit-transform-origin: center center;
           transform-origin: center center;
+}
+
+.slider .slider__inner .slider__prev:active {
+  -webkit-transform: translateX(0) scale(1);
+          transform: translateX(0) scale(1);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+}
+
+.slider .slider__inner .slider__iphone {
+  position: relative;
+}
+
+.slider .slider__inner .slider__iphone .slider__iphone--vertical {
+  position: absolute;
+  top: 53px;
+  left: 72px;
+}
+
+.slider .slider__inner .slider__iphone .slider__iphone--horizontal {
+  position: absolute;
+  top: 174px;
+  right: 71px;
 }
 
 .slider .slider__inner .slider__next {
@@ -164,25 +225,154 @@ ul {
   background-image: url("assets/img/next.png");
   background-repeat: no-repeat;
   background-position: center center;
-  -webkit-transition: all 0.5s linear;
-  transition: all 0.5s linear;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
   cursor: pointer;
 }
 
 .slider .slider__inner .slider__next:hover {
-  -webkit-transform: translateX(5px) scale(1.2);
-          transform: translateX(5px) scale(1.2);
+  -webkit-transform: translateX(3px) scale(1.2);
+          transform: translateX(3px) scale(1.2);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+}
+
+.slider .slider__inner .slider__next:active {
+  -webkit-transform: translateX(0) scale(1);
+          transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
           transform-origin: center center;
 }
 
 .services {
-  height: 500px;
+  min-height: 500px;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
 }
 
 .services .services__inner {
-  padding: 65px 38px 70px 40px;
+  padding-top: 62px;
+}
+
+.services .services__inner .services__title {
+  margin-bottom: 43px;
+}
+
+.services .services__inner .services__title h2 {
+  margin-bottom: 17px;
+  font-family: 'Lato Black', sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+  color: #666d89;
+}
+
+.services .services__inner .services__title p {
+  text-align: justify;
+  letter-spacing: -0.15px;
+  font-family: 'Lato Light', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 300;
+  color: #666d89;
+  line-height: 30px;
+}
+
+.services .services__inner .services__list .services__list--items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style-type: none;
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item {
+  position: relative;
+  width: 313px;
+  max-width: 300px;
+  max-height: 90px;
+  margin-bottom: 33px;
+  /* margin-right: 4px; */
+  padding-left: 80px;
+  overflow: hidden;
+  /* &:nth-child(3n) {
+            margin-right: 0px;
+          } */
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item:before {
+  position: absolute;
+  content: '';
+  width: 60px;
+  height: 60px;
+  top: 2px;
+  left: 0;
+  border-radius: 50%;
+  border: 2px solid #666d89;
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item h3 {
+  margin-bottom: 7px;
+  font-family: 'Lato Black', sans-serif;
+  color: #666d89;
+  font-size: 1.8rem;
+  font-weight: 400;
+  letter-spacing: -0.1px;
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item h3.ls-minus {
+  letter-spacing: -0.45px;
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item h3.ls-plus {
+  letter-spacing: 0.15px;
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item p {
+  font-family: 'Lato Regular', sans-serif;
+  font-size: 1.2rem;
+  line-height: 21px;
+  color: #767e9e;
+  text-align: justify;
+}
+
+.services .services__inner .services__list .services__list--items .services__list--item--pen:after,
+.services .services__inner .services__list .services__list--items .services__list--item--bulb:after,
+.services .services__inner .services__list .services__list--items .services__list--item--heart:after,
+.services .services__inner .services__list .services__list--items .services__list--item--phone:after,
+.services .services__inner .services__list .services__list--items .services__list--item--dialog:after,
+.services .services__inner .services__list .services__list--items .services__list--item--star:after {
+  position: absolute;
+  content: '';
+  width: 60px;
+  height: 60px;
+  top: 2px;
+  left: 0;
+}
+
+.services .services__inner .services__list .services__list--item--pen:after {
+  background: url("assets/img/pen.png") no-repeat center center;
+}
+
+.services .services__inner .services__list .services__list--item--bulb:after {
+  background: url("assets/img/bulb.png") no-repeat center center;
+}
+
+.services .services__inner .services__list .services__list--item--heart:after {
+  background: url("assets/img/heart.png") no-repeat center center;
+}
+
+.services .services__inner .services__list .services__list--item--phone:after {
+  background: url("assets/img/phone.png") no-repeat center center;
+}
+
+.services .services__inner .services__list .services__list--item--dialog:after {
+  background: url("assets/img/dialog.png") no-repeat center center;
+}
+
+.services .services__inner .services__list .services__list--item--star:after {
+  background: url("assets/img/star.png") no-repeat center center;
 }
 /*# sourceMappingURL=singolo1.css.map */
