--- a/singolo1.scss
+++ b/singolo1.scss
@@ -1,3 +1,23 @@
+@import 'fonts.scss';
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
@@ -9,30 +29,6 @@ body {
   background-color: #fefefe;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
-p {
-  margin: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
 .container {
   width: 100%;
   max-width: 1020px;
@@ -41,7 +37,7 @@ ul {
 }
 
 .header {
-  padding: 32px 0 32px;
+  padding: 33px 0 31px;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 
@@ -66,8 +62,8 @@ ul {
       &--list {
         display: flex;
         font-size: 1.2rem;
-        font-weight: 500;
-        letter-spacing: -0.01px;
+        font-weight: 900;
+        /* letter-spacing: -0.01px; */
         list-style-type: none;
         text-transform: uppercase;
 
@@ -93,9 +89,10 @@ ul {
           }
 
           a {
+            font-weight: 500;
             text-decoration: none;
             color: #ffffff;
-            transition: color 0.5s linear;
+            transition: color 0.3s linear;
 
             &:hover {
               color: #f06c64;
@@ -115,12 +112,15 @@ ul {
 
 .slider {
   height: 600px;
+  width: 100%;
+  min-width: 940px;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
 
   .slider__inner {
     position: relative;
     height: 590px;
+    /* width: 940px; */
     /*   padding: 0 40px; */
 
     .slider__prev {
@@ -133,12 +133,33 @@ ul {
       background-image: url('assets/img/prev.png');
       background-repeat: no-repeat;
       background-position: center center;
-      transition: all 0.5s linear;
+      transition: all 0.1s linear;
       cursor: pointer;
 
       &:hover {
-        transform: translateX(-5px) scale(1.2);
+        transform: translateX(-3px) scale(1.2);
         transform-origin: center center;
+      }
+
+      &:active {
+        transform: translateX(0) scale(1);
+        transform-origin: center center;
+      }
+    }
+
+    .slider__iphone {
+      position: relative;
+
+      .slider__iphone--vertical {
+        position: absolute;
+        top: 53px;
+        left: 72px;
+      }
+
+      .slider__iphone--horizontal {
+        position: absolute;
+        top: 174px;
+        right: 71px;
       }
     }
 
@@ -152,11 +173,16 @@ ul {
       background-image: url('assets/img/next.png');
       background-repeat: no-repeat;
       background-position: center center;
-      transition: all 0.5s linear;
+      transition: all 0.1s linear;
       cursor: pointer;
 
       &:hover {
-        transform: translateX(5px) scale(1.2);
+        transform: translateX(3px) scale(1.2);
+        transform-origin: center center;
+      }
+
+      &:active {
+        transform: translateX(0) scale(1);
         transform-origin: center center;
       }
     }
@@ -164,11 +190,139 @@ ul {
 }
 
 .services {
-  height: 500px;
+  min-height: 500px;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
 
   .services__inner {
-    padding: 65px 38px 70px 40px;
+    padding-top: 62px;
+
+    .services__title {
+      margin-bottom: 43px;
+
+      h2 {
+        margin-bottom: 17px;
+        font-family: 'Lato Black', sans-serif;
+        font-size: 3rem;
+        font-weight: 400;
+        color: #666d89;
+      }
+
+      p {
+        text-align: justify;
+        letter-spacing: -0.15px;
+        font-family: 'Lato Light', sans-serif;
+        font-size: 1.8rem;
+        font-weight: 300;
+        color: #666d89;
+        line-height: 30px;
+      }
+    }
+
+    .services__list {
+      .services__list--items {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        list-style-type: none;
+
+        .services__list--item {
+          position: relative;
+          width: 313px;
+          max-width: 300px;
+          max-height: 90px;
+          margin-bottom: 33px;
+          /* margin-right: 4px; */
+          padding-left: 80px;
+          overflow: hidden;
+
+          /* &:nth-child(3n) {
+            margin-right: 0px;
+          } */
+
+          &:before {
+            position: absolute;
+            content: '';
+            width: 60px;
+            height: 60px;
+            top: 2px;
+            left: 0;
+            border-radius: 50%;
+            border: 2px solid #666d89;
+          }
+
+          h3 {
+            margin-bottom: 7px;
+            font-family: 'Lato Black', sans-serif;
+            color: #666d89;
+            font-size: 1.8rem;
+            font-weight: 400;
+            letter-spacing: -0.1px;
+
+            &.ls-minus {
+              letter-spacing: -0.45px;
+            }
+
+            &.ls-plus {
+              letter-spacing: 0.15px;
+            }
+          }
+
+          p {
+            font-family: 'Lato Regular', sans-serif;
+            font-size: 1.2rem;
+            line-height: 21px;
+            color: #767e9e;
+            text-align: justify;
+          }
+        }
+        .services__list--item--pen,
+        .services__list--item--bulb,
+        .services__list--item--heart,
+        .services__list--item--phone,
+        .services__list--item--dialog,
+        .services__list--item--star {
+          &:after {
+            position: absolute;
+            content: '';
+            width: 60px;
+            height: 60px;
+            top: 2px;
+            left: 0;
+          }
+        }
+      }
+      .services__list--item--pen {
+        &:after {
+          background: url('assets/img/pen.png') no-repeat center center;
+        }
+      }
+      .services__list--item--bulb {
+        &:after {
+          background: url('assets/img/bulb.png') no-repeat center center;
+        }
+      }
+      .services__list--item--heart {
+        &:after {
+          background: url('assets/img/heart.png') no-repeat center center;
+        }
+      }
+      .services__list--item--phone {
+        &:after {
+          background: url('assets/img/phone.png') no-repeat center center;
+        }
+      }
+      .services__list--item--dialog {
+        &:after {
+          background: url('assets/img/dialog.png') no-repeat center center;
+        }
+      }
+      .services__list--item--star {
+        &:after {
+          background: url('assets/img/star.png') no-repeat center center;
+        }
+      }
+    }
   }
 }
