--- a/singolo1.css
+++ b/singolo1.css
@@ -1,43 +1,3 @@
-@font-face {
-  font-family: 'Lato Black';
-  src: url("assets/fonts/Lato-Black.eot");
-  src: url("assets/fonts/Lato-Black.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Black.woff") format("woff"), url("assets/fonts/Lato-Black.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato Bold';
-  src: url("assets/fonts/Lato-Bold.eot");
-  src: url("assets/fonts/Lato-Bold.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Bold.woff") format("woff"), url("assets/fonts/Lato-Bold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato Regular';
-  src: url("assets/fonts/Lato-Regular.eot");
-  src: url("assets/fonts/Lato-Regular.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Regular.woff") format("woff"), url("assets/fonts/Lato-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato Light';
-  src: url("assets/fonts/Lato-Light.eot");
-  src: url("assets/fonts/Lato-Light.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Light.woff") format("woff"), url("assets/fonts/Lato-Light.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Lato Thin';
-  src: url("assets/fonts/Lato-Thin.eot");
-  src: url("assets/fonts/Lato-Thin.eot?#iefix") format("embedded-opentype"), url("assets/fonts/Lato-Thin.woff") format("woff"), url("assets/fonts/Lato-Thin.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
 h1,
 h2,
 h3,
@@ -54,7 +14,7 @@ ul {
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -86,8 +46,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .header .header__inner .header__logo {
@@ -110,9 +70,9 @@ body {
   display: flex;
   font-size: 1.2rem;
   font-weight: 900;
-  /* letter-spacing: -0.01px; */
-  list-style-type: none;
   text-transform: uppercase;
+  letter-spacing: 0.02px;
+  list-style-type: none;
 }
 
 .header .header__inner .header__menu--list .header__menu--item {
@@ -125,13 +85,16 @@ body {
   margin-right: 0;
 }
 
-.header .header__inner .header__menu--list .header__menu--item:not(:last-child):after {
+.header
+  .header__inner
+  .header__menu--list
+  .header__menu--item:not(:last-child):after {
   content: '';
   position: absolute;
   top: 50%;
   right: -16px;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   width: 3px;
   height: 3px;
   background-color: #434759;
@@ -166,8 +129,6 @@ body {
 .slider .slider__inner {
   position: relative;
   height: 590px;
-  /* width: 940px; */
-  /*   padding: 0 40px; */
 }
 
 .slider .slider__inner .slider__prev {
@@ -177,7 +138,7 @@ body {
   left: 0;
   width: 20px;
   height: 30px;
-  background-image: url("assets/img/prev.png");
+  background-image: url('assets/img/prev.png');
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-transition: all 0.1s linear;
@@ -187,16 +148,16 @@ body {
 
 .slider .slider__inner .slider__prev:hover {
   -webkit-transform: translateX(-3px) scale(1.2);
-          transform: translateX(-3px) scale(1.2);
+  transform: translateX(-3px) scale(1.2);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
 }
 
 .slider .slider__inner .slider__prev:active {
   -webkit-transform: translateX(0) scale(1);
-          transform: translateX(0) scale(1);
+  transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
 }
 
 .slider .slider__inner .slider__iphone {
@@ -207,12 +168,68 @@ body {
   position: absolute;
   top: 53px;
   left: 72px;
+  z-index: 2;
+}
+
+.slider .slider__inner .slider__iphone .slider__iphone--vertical--pic {
+  position: absolute;
+  top: 115px;
+  left: 83px;
+  content: '';
+  width: 194px;
+  height: 339px;
+  background-color: #f2f2f2;
+  background-image: url('assets/img/iphone-vertical-pic.png');
+  background-size: cover;
+  background-position: 0 0;
+  z-index: 3;
+}
+
+.slider .slider__inner .slider__iphone .slider__iphone--vertical--shadow {
+  position: absolute;
+  top: 53px;
+  left: 72px;
+  content: '';
+  width: 240px;
+  height: 483px;
+  background-image: url('assets/img/iphone-vertical-shadow.png');
+  background-size: cover;
+  background-position: 0 0;
+  z-index: 1;
 }
 
 .slider .slider__inner .slider__iphone .slider__iphone--horizontal {
   position: absolute;
   top: 174px;
+  right: 97px;
+  z-index: 2;
+}
+
+.slider .slider__inner .slider__iphone .slider__iphone--horizontal--pic {
+  position: absolute;
+  top: 185px;
+  right: 159px;
+  content: '';
+  width: 339px;
+  height: 194px;
+  background-color: #f2f2f2;
+  background-image: url('assets/img/iphone-horizontal-pic.png');
+  background-size: cover;
+  background-position: 0 0;
+  z-index: 3;
+}
+
+.slider .slider__inner .slider__iphone .slider__iphone--horizontal--shadow {
+  position: absolute;
+  top: 174px;
   right: 71px;
+  content: '';
+  width: 483px;
+  height: 240px;
+  background-image: url('assets/img/iphone-horizontal-shadow.png');
+  background-size: cover;
+  background-position: 0 0;
+  z-index: 1;
 }
 
 .slider .slider__inner .slider__next {
@@ -222,7 +239,7 @@ body {
   right: -2px;
   width: 20px;
   height: 30px;
-  background-image: url("assets/img/next.png");
+  background-image: url('assets/img/next.png');
   background-repeat: no-repeat;
   background-position: center center;
   -webkit-transition: all 0.1s linear;
@@ -232,16 +249,16 @@ body {
 
 .slider .slider__inner .slider__next:hover {
   -webkit-transform: translateX(3px) scale(1.2);
-          transform: translateX(3px) scale(1.2);
+  transform: translateX(3px) scale(1.2);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
 }
 
 .slider .slider__inner .slider__next:active {
   -webkit-transform: translateX(0) scale(1);
-          transform: translateX(0) scale(1);
+  transform: translateX(0) scale(1);
   -webkit-transform-origin: center center;
-          transform-origin: center center;
+  transform-origin: center center;
 }
 
 .services {
@@ -281,28 +298,33 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   list-style-type: none;
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item {
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item {
   position: relative;
   width: 313px;
   max-width: 300px;
   max-height: 90px;
   margin-bottom: 33px;
-  /* margin-right: 4px; */
+  line-height: 23px;
   padding-left: 80px;
   overflow: hidden;
-  /* &:nth-child(3n) {
-            margin-right: 0px;
-          } */
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item:before {
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item:before {
   position: absolute;
   content: '';
   width: 60px;
@@ -313,37 +335,82 @@ body {
   border: 2px solid #666d89;
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item h3 {
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item
+  h3 {
   margin-bottom: 7px;
   font-family: 'Lato Black', sans-serif;
   color: #666d89;
-  font-size: 1.8rem;
+  font-size: 1.85rem;
   font-weight: 400;
-  letter-spacing: -0.1px;
+  letter-spacing: -0.3px;
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item h3.ls-minus {
-  letter-spacing: -0.45px;
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item
+  h3.ls-minus-s {
+  letter-spacing: -0.65px;
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item h3.ls-plus {
-  letter-spacing: 0.15px;
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item
+  h3.ls-minus-f {
+  letter-spacing: -0.05px;
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item p {
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item
+  p {
   font-family: 'Lato Regular', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.225rem;
   line-height: 21px;
-  color: #767e9e;
   text-align: justify;
+  letter-spacing: -0.25px;
+  color: #767e9e;
 }
 
-.services .services__inner .services__list .services__list--items .services__list--item--pen:after,
-.services .services__inner .services__list .services__list--items .services__list--item--bulb:after,
-.services .services__inner .services__list .services__list--items .services__list--item--heart:after,
-.services .services__inner .services__list .services__list--items .services__list--item--phone:after,
-.services .services__inner .services__list .services__list--items .services__list--item--dialog:after,
-.services .services__inner .services__list .services__list--items .services__list--item--star:after {
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item--pen:after,
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item--bulb:after,
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item--heart:after,
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item--phone:after,
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item--dialog:after,
+.services
+  .services__inner
+  .services__list
+  .services__list--items
+  .services__list--item--star:after {
   position: absolute;
   content: '';
   width: 60px;
@@ -353,26 +420,25 @@ body {
 }
 
 .services .services__inner .services__list .services__list--item--pen:after {
-  background: url("assets/img/pen.png") no-repeat center center;
+  background: url('assets/img/pen.png') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list--item--bulb:after {
-  background: url("assets/img/bulb.png") no-repeat center center;
+  background: url('assets/img/bulb.png') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list--item--heart:after {
-  background: url("assets/img/heart.png") no-repeat center center;
+  background: url('assets/img/heart.png') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list--item--phone:after {
-  background: url("assets/img/phone.png") no-repeat center center;
+  background: url('assets/img/phone.png') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list--item--dialog:after {
-  background: url("assets/img/dialog.png") no-repeat center center;
+  background: url('assets/img/dialog.png') no-repeat center center;
 }
 
 .services .services__inner .services__list .services__list--item--star:after {
-  background: url("assets/img/star.png") no-repeat center center;
+  background: url('assets/img/star.png') no-repeat center center;
 }
-/*# sourceMappingURL=singolo1.css.map */
