--- a/singolo1.scss
+++ b/singolo1.scss
@@ -1,5 +1,3 @@
-@import 'fonts.scss';
-
 h1,
 h2,
 h3,
@@ -63,9 +61,9 @@ body {
         display: flex;
         font-size: 1.2rem;
         font-weight: 900;
-        /* letter-spacing: -0.01px; */
-        list-style-type: none;
         text-transform: uppercase;
+        letter-spacing: 0.02px;
+        list-style-type: none;
 
         .header__menu--item {
           position: relative;
@@ -120,8 +118,6 @@ body {
   .slider__inner {
     position: relative;
     height: 590px;
-    /* width: 940px; */
-    /*   padding: 0 40px; */
 
     .slider__prev {
       content: '';
@@ -154,12 +150,68 @@ body {
         position: absolute;
         top: 53px;
         left: 72px;
+        z-index: 2;
+      }
+
+      .slider__iphone--vertical--pic {
+        position: absolute;
+        top: 115px;
+        left: 83px;
+        content: '';
+        width: 194px;
+        height: 339px;
+        background-color: #f2f2f2;
+        background-image: url('assets/img/iphone-vertical-pic.png');
+        background-size: cover;
+        background-position: 0 0;
+        z-index: 3;
+      }
+
+      .slider__iphone--vertical--shadow {
+        position: absolute;
+        top: 53px;
+        left: 72px;
+        content: '';
+        width: 240px;
+        height: 483px;
+        background-image: url('assets/img/iphone-vertical-shadow.png');
+        background-size: cover;
+        background-position: 0 0;
+        z-index: 1;
       }
 
       .slider__iphone--horizontal {
         position: absolute;
         top: 174px;
+        right: 97px;
+        z-index: 2;
+      }
+
+      .slider__iphone--horizontal--pic {
+        position: absolute;
+        top: 185px;
+        right: 159px;
+        content: '';
+        width: 339px;
+        height: 194px;
+        background-color: #f2f2f2;
+        background-image: url('assets/img/iphone-horizontal-pic.png');
+        background-size: cover;
+        background-position: 0 0;
+        z-index: 3;
+      }
+
+      .slider__iphone--horizontal--shadow {
+        position: absolute;
+        top: 174px;
         right: 71px;
+        content: '';
+        width: 483px;
+        height: 240px;
+        background-image: url('assets/img/iphone-horizontal-shadow.png');
+        background-size: cover;
+        background-position: 0 0;
+        z-index: 1;
       }
     }
 
@@ -233,13 +285,9 @@ body {
           max-width: 300px;
           max-height: 90px;
           margin-bottom: 33px;
-          /* margin-right: 4px; */
+          line-height: 23px;
           padding-left: 80px;
           overflow: hidden;
-
-          /* &:nth-child(3n) {
-            margin-right: 0px;
-          } */
 
           &:before {
             position: absolute;
@@ -256,25 +304,26 @@ body {
             margin-bottom: 7px;
             font-family: 'Lato Black', sans-serif;
             color: #666d89;
-            font-size: 1.8rem;
+            font-size: 1.85rem;
             font-weight: 400;
-            letter-spacing: -0.1px;
+            letter-spacing: -0.3px;
 
-            &.ls-minus {
-              letter-spacing: -0.45px;
+            &.ls-minus-s {
+              letter-spacing: -0.65px;
             }
 
-            &.ls-plus {
-              letter-spacing: 0.15px;
+            &.ls-minus-f {
+              letter-spacing: -0.05px;
             }
           }
 
           p {
             font-family: 'Lato Regular', sans-serif;
-            font-size: 1.2rem;
+            font-size: 1.225rem;
             line-height: 21px;
-            color: #767e9e;
             text-align: justify;
+            letter-spacing: -0.25px;
+            color: #767e9e;
           }
         }
         .services__list--item--pen,
