--- a/singolo2.css
+++ b/singolo2.css
@@ -20,7 +20,7 @@ li {
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -83,30 +83,43 @@ body {
 }
 
 .portfolio .portfolio__inner .portfolio__list--items .portfolio__list--item {
-  padding: 3px 7px;
+  /*           padding-top: 3px;
+          padding-bottom: 2px; */
+  padding-right: 7px;
+  padding-left: 7px;
   margin-right: 10px;
   border: 1px solid #666d89;
   border-radius: 5px;
   font-family: 'Lato Regular', sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
+  line-height: 20px;
   color: #767e9e;
   cursor: pointer;
   -webkit-transition: color 0.2s linear, border-color 0.2s linear;
   transition: color 0.2s linear, border-color 0.2s linear;
 }
 
-.portfolio .portfolio__inner .portfolio__list--items .portfolio__list--item:last-child {
+.portfolio
+  .portfolio__inner
+  .portfolio__list--items
+  .portfolio__list--item:last-child {
   margin-right: 0;
   padding-left: 6px;
 }
 
-.portfolio .portfolio__inner .portfolio__list--items .portfolio__list--item:not(:first-child) {
+.portfolio
+  .portfolio__inner
+  .portfolio__list--items
+  .portfolio__list--item:not(:first-child) {
   letter-spacing: -0.2px;
   /*  padding: 3px 6px; */
 }
 
-.portfolio .portfolio__inner .portfolio__list--items .portfolio__list--item:hover {
+.portfolio
+  .portfolio__inner
+  .portfolio__list--items
+  .portfolio__list--item:hover {
   color: #c5c5c5;
   border-color: #c5c5c5;
 }
@@ -121,48 +134,59 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   max-width: 940px;
   max-height: 601px;
   overflow: hidden;
 }
 
-.portfolio .portfolio__inner .portfolio__images--items .portfolio__images--item {
+.portfolio
+  .portfolio__inner
+  .portfolio__images--items
+  .portfolio__images--item {
   margin-bottom: 20px;
   cursor: pointer;
 }
 
-.portfolio .portfolio__inner .portfolio__images--items .portfolio__images--item img {
+.portfolio
+  .portfolio__inner
+  .portfolio__images--items
+  .portfolio__images--item
+  img {
   -webkit-transition: -webkit-filter 0.2s linear;
   transition: -webkit-filter 0.2s linear;
   transition: filter 0.2s linear;
   transition: filter 0.2s linear, -webkit-filter 0.2s linear;
 }
 
-.portfolio .portfolio__inner .portfolio__images--items .portfolio__images--item img:hover {
+.portfolio
+  .portfolio__inner
+  .portfolio__images--items
+  .portfolio__images--item
+  img:hover {
   -webkit-filter: opacity(0.7);
-          filter: opacity(0.7);
+  filter: opacity(0.7);
 }
 
 .about {
   background-color: #f2f2f2;
-  border-bottom: 6px solid #ffffff;
+  border-bottom: 6px solid red;
 }
 
 .about .about__inner {
   padding-top: 62px;
-  padding-bottom: 49px;
+  padding-bottom: 50px;
 }
 
 .about .about__inner .about__title {
-  margin-bottom: 42px;
+  margin-bottom: 43px;
 }
 
 .about .about__inner .about__title h2 {
-  margin-bottom: 18px;
+  margin-bottom: 17px;
   font-family: 'Lato Black', sans-serif;
   font-size: 3rem;
   font-weight: 400;
@@ -185,10 +209,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   /*   width: 100%; */
   max-width: 940px;
   overflow: hidden;
@@ -230,14 +254,14 @@ body {
 
 .about .about__inner .about__team--item:nth-child(2) {
   -webkit-transform: translateX(-1px);
-          transform: translateX(-1px);
+  transform: translateX(-1px);
 }
 
 .about .about__inner .about__team .about__team--item--social {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .about .about__inner .about__team li {
@@ -245,11 +269,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-right: 8px;
   width: 32px;
   height: 32px;
@@ -279,4 +303,3 @@ body {
   -webkit-transition: fill 0.2s linear;
   transition: fill 0.2s linear;
 }
-/*# sourceMappingURL=singolo2.css.map */
